--- a/reserveTime/core/templates/register-restaurant.html
+++ b/reserveTime/core/templates/register-restaurant.html
@@ -23,10 +23,10 @@
     {% include 'partials/header.html' %}
 
     <!-- <main class="mb-5"> -->
-        <div class="container main-register-container pb-5">
+        <div class="container main-register-container pb-5 mb-5">
             <div class="row">
                 <div class="col-lg-12 pt-5">
-                    <p class="bold">You have to fill all informations correctly, we will come back you with ...</p>
+                    <p class="bold text-center">You have to fill all informations correctly, we will come back you in shortest time.</p>
                     <form method="POST">
                         {% csrf_token %}
 
@@ -139,9 +139,10 @@
     {% include 'partials/footer.html' %}
 
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
