--- a/reserveTime/static/css/company-profile.css
+++ b/reserveTime/static/css/company-profile.css
@@ -68,7 +68,7 @@
 }
 .photo-gallery img{
     width: 100%;
-    height: 100%;
+    height: 220px;
     object-fit: cover;
 }
 .menu-item-header{
@@ -182,6 +182,14 @@
     width: 100%;
     height: 50px;
     background-color: #da3743;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.find-table-btn:hover{
+    text-decoration: none;
     color: #fff;
 }
 
