--- a/reserveTime/core/templates/write-comment.html
+++ b/reserveTime/core/templates/write-comment.html
@@ -55,8 +55,8 @@
                                 <span style="color: #6f737b;" class="mb-2">Based on {{all_likes}} recommendation</span>
                                 <span>Would you recommend this restaurant? </span>
                                 <div class="d-flex like-box mt-2">
-                                    <input type="radio" value="1" name="like" id='liked'><label class="btn btn-outline-success mr-2" for="liked">Yes</label>
-                                    <input type="radio" value="0" name="like" id='notLiked'><label class="btn btn-outline-danger" for="notLiked">No</label>
+                                    <input type="radio" value="1" name="like" id='liked'><label class="btn btn-outline-success mr-2 liked" for="liked">Yes</label>
+                                    <input type="radio" value="0" name="like" id='notLiked'><label class="btn btn-outline-danger notLiked" for="notLiked">No</label>
                                 </div>
                             </div>
                         </div>
@@ -174,6 +174,7 @@
                     $(this).text('Show full menu')
                 }
             });
+           
         });
     </script>
 </body>
