--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -397,6 +397,7 @@ footer{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: .5s all ease-in;
 }
 .company-item .name{
     padding: 0;
