--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -306,6 +306,8 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .overlay-text p{
