--- a/reserveTime/core/templates/company-list.html
+++ b/reserveTime/core/templates/company-list.html
@@ -25,6 +25,7 @@
         }
         .img-box-container{
             width: 100%;
+            height: 100%;
             overflow: hidden;
         }
         .company-profile-img img:hover{
