--- a/reserveTime/core/templates/cuisines-list.html
+++ b/reserveTime/core/templates/cuisines-list.html
@@ -22,12 +22,13 @@
         }
         .img-box-container{
             width: 100%;
+            height: 100%;
             overflow: hidden;
         }
         .company-profile-img img:hover{
-            transform: scale(1.3, 1.3);
-            -ms-transform: scale(1.3, 1.3);
-            -webkit-transform: scale(1.3, 1.3);
+            transform: scale(1.2, 1.2);
+            -ms-transform: scale(1.2, 1.2);
+            -webkit-transform: scale(1.2, 1.2);
         }
     </style>
 </head>
