--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -273,6 +273,7 @@ h3{
 .col-4 img{
     width: 100%;
     height: 250px;
+    object-fit: cover;
 }
 .city-list{
     display: flex;
@@ -397,7 +398,7 @@ footer{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: .5s all ease-in;
+    transition: .3s all ease-in;
 }
 .company-item .name{
     padding: 0;
